test/classes/casts/coerceAssign/error/from-borrowed-Parent-nilable-to-shared-Child-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
proc foo() {
  // coercing from borrowed Parent? to shared Child?
  var allocFrom = new owned Parent?();
  var a:borrowed Parent? = allocFrom;
  var a_ = new shared Child?();
  a_ = a;
}
proc main() {
  foo();
}
